# LearnaDo

./: .env.example  .gitignore  CLI_USAGE.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_agent.py  websearch_logs.json
alembic/: env.py
alembic/versions/: 313a2f8ee10f_expand_wa_session_state_length.py  c138b1eebfc8_initial_schema.py
app/: __init__.py  agent.py  agent_bridge.py  config.py  database.py  models.py  router.py  routes.py  schemas.py  services.py  utils.py  webhook.py  whatsapp.py
tests/: test_app.py  test_whisper.py
