[project]
name = "learnado"
version = "1.0.0"
description = "AI-powered learning assistant for document processing and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "learning", "fastapi", "document-processing", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

dependencies = [
    # Core Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.30",
    "python-multipart>=0.0.9",

    # AI / NLP - Updated versions with Python 3.13 support
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "tavily-python>=0.3.0",
    "gpt4all>=2.7.0",
    "transformers>=4.45.0",
    "sentence-transformers>=3.0.1",
    "huggingface-hub>=0.26.0",
    "tokenizers>=0.20.0",
    "openai-whisper>=20231117",

    # Data Preprocessing
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.13",
    "pillow>=11.3.0",
    "pytesseract>=0.3.10",

    # Utilities
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
voice = [
    "coqui-tts>=0.22.0",
]

[project.scripts]
learnado = "run_agent:main"
learnado-agent = "app.agent:run_cli"

[project.urls]
Homepage = "https://github.com/yourusername/learnado"
Repository = "https://github.com/yourusername/learnado"
Issues = "https://github.com/yourusername/learnado/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
